// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en componente <GitExpertApp/> debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <hr />
  <AddCategory
    setCategories={[Function]}
  />
  <ol>
    <GifGrid
      category="One Punch"
    />
    <GifGrid
      category="Dragon Ball"
    />
  </ol>
</Fragment>
`;

exports[`Pruebas en componente <GitExpertApp/> debe mostrarse correctamente 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <hr />
  <AddCategory
    setCategories={[Function]}
  />
  <ol />
</Fragment>
`;
